--- a/journal/201905.md
+++ b/journal/201905.md
@@ -6,7 +6,7 @@ May's highlights:
 
 * DCP4 activated. Decred's mainnet is now ready for Lightning Network.
 * iOS wallet's first release candidate entered public testing.
-* The first phase of 3 Treasury funded proposals (Ditto, Research and Bounty) has come to an end, with recaps being published and proposals for further funding already opened for Ditto and the research program. A total of 6 proposals were submitted in May, with 4 open for voting in early June.
+* The first phase of 3 Treasury funded proposals (Ditto, Research and Bounty) are coming to an end, with recaps being published and proposals for further funding already opened for Ditto and the research program. A total of 6 proposals were submitted in May, with 4 open for voting in early June.
 * Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features @elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each.
 
 ## Development
@@ -21,7 +21,7 @@ A major pending change to mining code that deserves a special mention is an [ove
 
 [dcrwallet](https://github.com/decred/dcrwallet): Bug fixes, improved [error handling](https://github.com/decred/dcrwallet/pull/1453), and simplified [concurrent code](https://github.com/decred/dcrwallet/pull/1451) and increased concurrent use of an unlocked wallet. Work started on [CleanOutAccount](https://github.com/decred/dcrwallet/pull/1419) feature, which is similar to SweepAccount but allows multiple transactions.
 
-[Decrediton](https://github.com/decred/decrediton): Work on responsive design continues with a newly responsive [Transaction/History](https://github.com/decred/decrediton/pull/2124) view (responsive design [master issue](https://github.com/decred/decrediton/issues/1820)). Work continues on initial [LN wallet](https://github.com/decred/decrediton/pull/2107) integration.
+[Decrediton](https://github.com/decred/decrediton): Work on [responsive design](https://github.com/decred/decrediton/issues/1820) continues with a newly responsive [Transaction/History](https://github.com/decred/decrediton/pull/2124) view. Work continues on initial [LN wallet](https://github.com/decred/decrediton/pull/2107) integration.
 
 [Politeia](https://github.com/decred/politeia): Front end changes include an improved proposal list view, continuous loading of proposals while scrolling, and no more redirect when session expires - now a login modal window will pop up. The backend saw performance improvements and bug fixes, changes to the user database (user data at rest is now encrypted), and an updated API endpoint that allows non-admins to look up userID/username by public key. These lookups will allow for data about user comments and votes to be organized by user account rather than public key.
 
@@ -33,9 +33,9 @@ Work has begun to [reduce coupling](https://github.com/decred/dcrlnd/pull/29) wi
 
 dcrlnd has been added to the [Bug Bounty Program](https://bounty.decred.org/) on an experimental basis, with [caveats](https://github.com/decred/dcrlnd#security).
 
-[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and UI optimizations, as well as a newly added send & estimation [function](https://github.com/decred/dcrandroid/pull/371). Code has been updated to be compatible with latest [dcrlibwallet](https://github.com/decred/dcrandroid/pull/356) - a shared component reused by dcrandroid, dcrios, and godcr.
+[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and UI optimizations, as well as a newly added send & estimation [function](https://github.com/decred/dcrandroid/pull/371). Code has been [updated](https://github.com/decred/dcrandroid/pull/356) to be compatible with latest [dcrlibwallet](https://github.com/raedahgroup/dcrlibwallet) - a shared component reused by dcrandroid, dcrios, and [godcr](https://github.com/raedahgroup/godcr).
 
-[dcrios](https://github.com/raedahgroup/dcrios): [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) of the iOS Wallet is ready for broader public testing. Development efforts ramped up in preparation for official launch. Bugs reported by users of the test app have been fixed, UI improvements have been made, and a large refactoring was performed to [clean up](https://github.com/raedahgroup/dcrios/pull/391) the repository and improve test coverage. Apple Store release is imminent!
+[dcrios](https://github.com/raedahgroup/dcrios): Release Candidate 1 of the iOS Wallet is [ready](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) for broader public testing. Development efforts ramped up in preparation for official launch. Bugs reported by users of the test app have been fixed, UI improvements have been made, and a large refactoring was performed to [clean up](https://github.com/raedahgroup/dcrios/pull/391) the repository and improve test coverage. Apple Store release is imminent!
 
 [dcrdata](https://github.com/decred/dcrdata): A markets [dashboard](https://alpha.dcrdata.org/market) has been added to the alpha site with most relevant market information, such as: USD and BTC price and volume from top Decred markets, indexes of BTC/USD price, charts of order book depth, volume and market history.
 
@@ -46,7 +46,7 @@ dcrlnd has been added to the [Bug Bounty Program](https://bounty.decred.org/) on
 Other:
 
 * dcrstakepool (VSP software) received a [redesign](https://github.com/decred/dcrstakepool/pull/339).
-* dcrd successfully [synced](https://twitter.com/marco_peereboom/status/1128763544118362112) on RISC-V QEMU. RISC-V is a hope for a less horrible CPU architecture.
+* dcrd successfully [synced](https://twitter.com/marco_peereboom/status/1128763544118362112) on RISC-V QEMU. [RISC-V](https://en.wikipedia.org/wiki/RISC-V) is a hope for a less horrible CPU architecture.
 
 Dev activity stats for May: 88 active PRs, 272 master commits, 52K added and 57K deleted lines spread across 15 repositories. Contributions came from 2-7 developers per repository.
 
@@ -78,7 +78,7 @@ Below is the proposal status as of Jun 1.
 
 1 additional proposal finished voting and was approved:
 
-* [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337, proposed a method of decentralizing Treasury spending with a monthly on chain vote to approve payments to contractors. It was approved with 97.5% Yes votes.
+* [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337, proposed a method of decentralizing Treasury spending with a monthly on chain vote to approve payments to contractors. It was approved with 97.5% Yes votes and participation of 22.5% tickets.
 
 The first constitution amendment has been [applied](https://docs.decred.org/governance/decred-constitution/) on docs.decred.org.
 
@@ -86,7 +86,7 @@ The first constitution amendment has been [applied](https://docs.decred.org/gove
 
 Politeia Digest has more in depth coverage of these proposals and associated developments, see [issue 15](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-015.md) and [issue 16](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-016.md) that were released in May.
 
-As a reminder, [@pi_crumbs](https://twitter.com/pi_crumbs) tweets when new proposals are published, edited or start voting.
+[@pi_crumbs](https://twitter.com/pi_crumbs) continues tweeting when new proposals are published, edited or start voting.
 
 ## Network
 
@@ -98,7 +98,7 @@ Nodes: as of Jun 2 there were 270 public nodes. In that snapshot, 168 nodes were
 
 Another useful source of node stats is dcr.farm. Throughout May it shows a large variation in the count of v1.4.0 nodes (103-237), but it has a nice [chart](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1556582400000&to=1559390400000) of node version history that gives a general idea that the network is mostly on v1.4.0+ now.
 
-The source we were using for node stats previously (dcred.eu) was shut down. We are thankful for all of the information it served to be recorded in the journal, and sorry to see it go. A feature request to add similar stats to dcrdata is discussed [here](https://github.com/decred/dcrdata/issues/1214).
+The source we were using for node stats previously (dcred.eu) was shut down. We are thankful for all of the information it served to be recorded in the Journal, and sorry to see it go. A feature request to add similar stats to dcrdata is discussed [here](https://github.com/decred/dcrdata/issues/1214).
 
 Soon after the activation of the new consensus rules, there was a [transaction](https://www.reddit.com/r/decred/comments/bnep6p/if_you_were_running_decrediton_at_13_or_earlier/) that made use of the new rules. The nodes that did not recognize this transaction as valid got forked off the network and stuck on block 342,913. We had a steady stream of people dropping by on the support channels throughout the month as many of their wallets stopped syncing. There was no major network level outage observed.
 
@@ -139,10 +139,10 @@ Ditto's May achievements:
 * Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Magazine, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @Dustorf.
 * @liz\_bagot and @treydpr from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM).
 * @jy-p and @MustStopMurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
-* @jy-p quoted about Facebook getting into crypto in: [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
+* @jy-p was quoted about Facebook getting into crypto in [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
 * @moo31337 [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto 101 podcast. Starts at 17:32.
 * @MustStopMurad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
-* [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain week meeting.
+* [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain Week meeting.
 * The Information quoted @jy-p in a [story](https://www.theinformation.com/articles/can-crypto-crack-the-retail-market) about the launch of Spedn.
 * @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.".
 * Secured a speaking slot for @jy-p about decentralization and Decred's funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
@@ -157,7 +157,7 @@ Attended:
 * May 7 - [ThatCrypto Meetup](https://www.meetup.com/ThatCrypto/events/261086851/) - Toronto, Canada. @michae2xl and @zubair [presented](https://twitter.com/Decred_CA/status/1126168172472733696) Decred. ([video](https://www.youtube.com/watch?v=Q47CDWYuIHc))
 * May 13 - [Consensus 2019](https://www.coindesk.com/events/consensus-2019) - New York, USA. @jy-p presented a Decred Roadmap update, featuring details on funding and development. ([video](https://www.youtube.com/watch?v=h-AfggMHVvE))
 * May 15 - [Atomic Swap](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) - New York, USA. Decred co-sponsored the Atomic Swap event organized by The Block. @jy-p spoke on a panel about "The Idealist's Dilemma".
-* May 17 - [Global Blockchain Forum](https://twitter.com/wanbihou/status/1129467061220941824) - Hangzhou, China. @Dominic presented Decred.
+* May 17 - Global Blockchain Forum - Hangzhou, China. @Dominic [presented](https://twitter.com/wanbihou/status/1129467061220941824) Decred.
 * May 18 - Chengdu, China. @Dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
 * May 18-19 - [CriptoLatinFest](https://criptolatinfest.com/) - Bogotá, Colombia. @elian presented Decred at this event with around 300 attendees. The event attracted attendees who were more interested in speculation than the fundamentals of the technology. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190518-criptolatinfest-bogota-colombia.md))
 * May 20-21 - [La Conexión](https://www.la-conexion.com/) - Medellín, Colombia. @elian presented Decred at this event with around 200 attendees, an international mixture of investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190520-laconexion-medellin-colombia.md))
@@ -168,13 +168,12 @@ Attended:
 
 Upcoming:
 
-* Jun 5 - [Decred x Blueyard meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-tickets-61631192556) - Berlin, Germany. @jholdstock will give a presentation and Q&A about Decred. @Haon will also be in attendance.
 * Jun 12 - [Meetup](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. Join Decred, [The Dartmouth Entrepreneurial Network of DC](https://dendc.wildapricot.org/), and [TechSpace](https://www.techspace.com/coworking-space-near-washington-dc-virginia/) for an evening of conversations and an overview of Decred: A Decentralized Autonomous Entity. Tickets are free but limited, available [here](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/). Organized by @akinsawyerr.
 * Jun 18 - [TF Blockchain](https://www.tfblock.io/portland) - Portland, USA. @raedah will represent Decred.
 * Jun 19-23 - [Campus Party](https://brasil.campus-party.org/campus-party-brasilia/) - Brasília, Brazil. Decred team [will be](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15596690544084yAyIh:decred.org) presenting 2 lectures on the main stages and around 4 or 5 in our arena. The Brazilian community will be sponsoring a CTF (Capture the Flag) championship with Decred awards. The event runs 24 hours a day. There will be about 60,000 participants and 6,000 camped.
 * Jul 1-2 - [Wharton Roundtable on Cryptogovernance](https://zicklincenter.wharton.upenn.edu/event/wharton-cryptogovernance-workshop/) - San Francisco, USA. The Zicklin Center for Business Ethics Research at the Wharton School of the University of Pennsylvania is launching a new initiative on the governance of blockchain-related projects, platforms, and consortia. Initial meeting will take place at Wharton San Francisco for approximately 25 highly-esteemed experts, representing a wide variety of perspectives and backgrounds. @akinsawyerr will be attending on behalf of Decred.
 
-Events [repository](https://github.com/decredcommunity/events) was re-published under decredcommunity GitHub organization with 10 past [reports](https://github.com/decredcommunity/events/tree/master/reports) polished and extended with links to photos and videos. Event attendees are encouraged to [submit](https://github.com/decredcommunity/events/wiki/Submit-Event-Report) event reports to share experience with other Decred representatives and the wider community about cryptocurrency situation in various locations.
+Events [repository](https://github.com/decredcommunity/events) was re-published under [decredcommunity](https://github.com/decredcommunity) GitHub organization with 10 past [reports](https://github.com/decredcommunity/events/tree/master/reports) polished and extended with links to photos and videos. Event attendees are encouraged to [submit](https://github.com/decredcommunity/events/wiki/Submit-Event-Report) event reports to share experience with other Decred representatives and the wider community about cryptocurrency situation in various locations.
 
 ## Media
 
@@ -193,7 +192,7 @@ Selected articles:
 
 Translations:
 
-* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by @duyenemdo and sponsored by Raedah Group. Since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1. Vietnamese now leads by the number of DJ translations and is the only language that has all issues.
+* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by @duyenemdo - sponsored by Raedah Group. Since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1. Vietnamese now leads by the number of DJ translations being and is the only language that has all issues.
 * March Journal [translated](https://insaf01.github.io/decred-journal-ar/journal/201903.html) to Arabic by @arij and reviewed by @abdulrahman4.
 
 Videos:
@@ -257,7 +256,7 @@ EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_ma
 
 Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the founder's reward's reliance on the Electronic Coin Company, and are encouraging community members to present and develop plans for decentralized governance of this fund.
 
-Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work.
+Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) through inflation in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work.
 
 Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation-370cafcc48ee) investment foundation is nearing completion, and Dash will be holding an election to select a set of supervisors to oversee its operation. The Dash Investment Foundation will be able to take ownership of equity or other assets in consideration for network funding. The election to fill the remaining 4 of 6 supervisor seats [started](https://blog.dash.org/details-on-the-election-for-dash-investment-foundation-supervisors-25766c55a1f) on May 30, and will be followed by budgetary proposals to fund the foundation's administrative costs and allocate some capital for it to invest.
 
@@ -267,7 +266,7 @@ A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.co
 
 Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security, and Poloniex's concurrent support for ICO projects that seem to better fit the definition of a security. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission. The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
 
-Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a Defend Crypto [initiative](https://www.defendcrypto.org/) by which they collect donations to take SEC to court. On Jun 4 the SEC responded by [opening](https://www.coindesk.com/the-sec-is-suing-kik-for-its-2017-ico) formal proceedings against Kik.
+Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a [Defend Crypto](https://www.defendcrypto.org/) initiative by which they collect donations to take SEC to court. On Jun 4 the SEC [opened](https://www.coindesk.com/the-sec-is-suing-kik-for-its-2017-ico) formal proceedings against Kik.
 
 As part of Bitfinex's engagement with the New York District Attorney, it has [emerged](https://www.coindesk.com/tether-lawyer-confirms-stablecoin-74-percent-backed-by-cash-and-equivalents) that Tether was only 74% backed by USD on Apr 30, according to their legal representative.
 
