--- a/journal/201905.md
+++ b/journal/201905.md
@@ -1,13 +1,13 @@
 # Decred Journal – May 2019
 
-![abstract art](../img/journal-201905-384.jpg "Tap Into the Source by @saender. Movements and hierarchy of cubes on the volumetric grid remind of programming or the logic of it. Cubes flow upwards to where the light shines (the source).")
+![abstract art](../img/journal-201905-384.jpg "Tap Into the Source by Sander Meentalo. Movements and hierarchy of cubes on the volumetric grid remind of programming or the logic of it. Cubes flow upwards to where the light shines (the source).")
 
 May's highlights:
 
 * DCP4 activated. Decred's mainnet is now ready for Lightning Network.
 * iOS wallet's first release candidate entered public testing.
 * The first phase of 3 Treasury funded proposals (Ditto, Research and Bounty) are coming to an end, with recaps being published and proposals for further funding already opened for Ditto and the research program. A total of 6 proposals were submitted in May, with 4 open for voting in early June.
-* Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features @elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each.
+* Decred Assembly and Decred in Depth podcasts completed early production and released the first episodes. The Decred Distributed video features Elian, who later in May went on to cover 3 events in 7 days in Colombia and Uruguay, and provide detailed descriptions his experience at each.
 
 ## Development
 
@@ -74,7 +74,7 @@ Below is the proposal status as of Jun 1.
 
 * [A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979, a proposal to write an article about Politeia and the author's proposal submission journey. This proposal initially appeared to have good support, but after [comments](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737/comments/29) about @jer979's past relationship with IOTA lost some of that support and was ultimately rejected with 48.6% approval (and voter participation of 44%, the second highest participation rate in Politeia's history).
 
-  While the proposal was rejected, @jer979 still [published](https://www.neverstopmarketing.com/a-tale-of-two-daos-and-the-rise-of-contributor-experience/) his journey on his website. In the article, he argued that "Contributor Experience" (CX) is important and compared proposal submission experience of DAOstack and Decred, outlining some friction points. Following an [exchange](https://twitter.com/lukebp_/status/1131195413925638144) on Twitter, @lukebp captured the feedback in a [GitHub issue](https://github.com/decred/politeiagui/issues/1221).
+  While the proposal was rejected, @jer979 still [published](https://www.neverstopmarketing.com/a-tale-of-two-daos-and-the-rise-of-contributor-experience/) his journey on his website. In the article, he argued that "Contributor Experience" (CX) is important and compared proposal submission experience of DAOstack and Decred, outlining some friction points. Following an [exchange](https://twitter.com/lukebp_/status/1131195413925638144) on Twitter, Luke captured the feedback in a [GitHub issue](https://github.com/decred/politeiagui/issues/1221).
 
 1 additional proposal finished voting and was approved:
 
@@ -94,7 +94,7 @@ Hashrate: May's hashrate opened at ~524 Ph/s and closed ~574 Ph/s, bottoming at 
 
 Staking: 30-day average ticket price was 116 DCR (-1.2) per dcrstats.com. The price varied between 109.7-124.7 DCR. Locked amount was 4.68-4.83 million DCR, which corresponded to 47.60-49.17% of the available supply per [dcr.farm](https://charts.dcr.farm/d/000000003/proof-of-stake).
 
-Nodes: as of Jun 2 there were 270 public nodes. In that snapshot, 168 nodes were IPv4 with the following continent distribution: Europe 53%, North America 39%, Asia 7%. Top countries: USA 31.6%, Germany 14%, France 10%, Canada 7.8%, UK 5.4%, Netherlands 5.4%. Thanks to @chappjc for the snapshot.
+Nodes: as of Jun 2 there were 270 public nodes. In that snapshot, 168 nodes were IPv4 with the following continent distribution: Europe 53%, North America 39%, Asia 7%. Top countries: USA 31.6%, Germany 14%, France 10%, Canada 7.8%, UK 5.4%, Netherlands 5.4%. Thanks to Jonathan Chappelow for the snapshot.
 
 Another useful source of node stats is dcr.farm. Throughout May it shows a large variation in the count of v1.4.0 nodes (103-237), but it has a nice [chart](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1556582400000&to=1559390400000) of node version history that gives a general idea that the network is mostly on v1.4.0+ now.
 
@@ -126,26 +126,26 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Decred was busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. [Decred Africa](https://t.me/DecredAfrica) Telegram group was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24. In NYC, various community members attended the Magical Crypto Conference on May 10-11, then Consensus the following three days. At Consensus, @jy-p presented a 30 minute update on Decred's funding and roadmap as part of their Changelogs track. Additionally, @jy-p spoke later that day at Ditto PR & The Block's first ever conference, Atomic Swap. @jy-p was on a panel with Beam, Dash and Orbs representatives, and the discussion focused on decentralization and governance. Decred coordinated a dinner with members of its Asian community and formulated a strategy to penetrate the Asian market, prioritizing China in the immediate term. @Dominic and @changhugo are planning an event to host and promote a meetup in Beijing in the near future, and Decred is working on a plan to host an event in Signapore, potentially in September.
+Decred was busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. [Decred Africa](https://t.me/DecredAfrica) Telegram group was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24. In NYC, various community members attended the Magical Crypto Conference on May 10-11, then Consensus the following three days. At Consensus, Jake presented a 30 minute update on Decred's funding and roadmap as part of their Changelogs track. Additionally, Jake spoke later that day at Ditto PR & The Block's first ever conference, Atomic Swap. Jake was on a panel with Beam, Dash and Orbs representatives, and the discussion focused on decentralization and governance. Decred coordinated a dinner with members of its Asian community and formulated a strategy to penetrate the Asian market, prioritizing China in the immediate term. Dominic and Hugo are planning an event to host and promote a meetup in Beijing in the near future, and Decred is working on a plan to host an event in Signapore, potentially in September.
 
-@anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with @jz, @MustStopMurad, Joel Monegro, @lukebp, @jholdstock, and Permabull Nino. The first podcast with @jz was [released](https://www.youtube.com/watch?v=rcEJuN7zh2M), with others to follow every two weeks.
+@anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with Jonathan Zeppettini, Murad Mahmudov, Joel Monegro, Luke Powell, Jamie Holdstock, and Permabull Nino. The first podcast with Jonathan was [released](https://www.youtube.com/watch?v=rcEJuN7zh2M), with others to follow every two weeks.
 
-@Dustorf released the first part of the Decred Assembly, a segment titled Decred Distributed that looks at places around the world and talks with local community organizers to understand what Decred is doing in those areas. The first [edition](https://www.youtube.com/watch?v=N7GYD8zwOe8) featured @elian, who is leading efforts in Mexico and doing a lot of great work in Latin America. In early June, additional segments will be released, including an in-depth discussion with @jy-p about the DEX proposal.
+Dustin released the first part of the Decred Assembly, a segment titled Decred Distributed that looks at places around the world and talks with local community organizers to understand what Decred is doing in those areas. The first [edition](https://www.youtube.com/watch?v=N7GYD8zwOe8) featured Elian Huesca, who is leading efforts in Mexico and doing a lot of great work in Latin America. In early June, additional segments will be released, including an in-depth discussion with Jake about the DEX proposal.
 
 Ditto's May achievements:
 
 * Ditto and The Block hosted Atomic Swap, an invite-only event during Blockchain Week NYC attended by 150 crypto influencers, media, investors, and enthusiasts, and sponsored by Decred. The Block published a [story](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) prior to the event.
-* @jy-p spoke on "The Idealist's Dilemma" panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
-* Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Magazine, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including @akinsawyerr, @anshawblack, @jholdstock, @lukebp, @jy-p, @jz, @Dustorf.
-* @liz\_bagot and @treydpr from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM).
-* @jy-p and @MustStopMurad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
-* @jy-p was quoted about Facebook getting into crypto in [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
-* @moo31337 [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto 101 podcast. Starts at 17:32.
-* @MustStopMurad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
+* Jake spoke on "The Idealist's Dilemma" panel at Atomic Swap, where he debated what it means to be a decentralized protocol alongside Beam, Dash, and Orbs.
+* Reporters from top-tier media such as Bloomberg, The Block, Bitcoin Magazine, Fortune and other outlets attended Atomic Swap. Team Ditto was also able to meet several Decred community members in person there, including Akin Sawyerr, @anshawblack, Jamie Holdstock, Luke, Jake, Jonathan Zeppettini, Dustin.
+* Liz and Trey from Ditto answered the community's questions on a Reddit [AMA](https://www.reddit.com/r/decred/comments/bm9as0/ama_livestream_with_liz_and_trey_from_ditto_pr/) and livestreamed video on [YouTube](https://www.youtube.com/watch?v=i8XjAOMX-VM).
+* Jake and Murad met with reporters from BTC Manager, The Information, and Bitcoin Magazine during Blockchain Week NYC.
+* Jake was quoted about Facebook getting into crypto in [Crowdfund Insider](https://www.crowdfundinsider.com/2019/05/147078-blockchain-industry-comments-on-expected-facebook-cryptocurrency-facebook-is-the-antithesis-of-what-cryptocurrency-stands-for/), [Live Bitcoin News](https://www.livebitcoinnews.com/facebook-coin-is-garnering-mixed-reactions/), and [The Daily Hodl](https://dailyhodl.com/2019/05/07/crypto-economist-behind-the-mit-bitcoin-experiment-is-reportedly-working-on-facebooks-new-coin/).
+* Marco [spoke](https://soundcloud.com/matthew-aaron-690749808/horizen-decred-casino-coin-101) with host Matthew Aaron on the Crypto 101 podcast. Starts at 17:32.
+* Murad [appeared](https://cheddar.com/media/after-40-million-hack-bitcoin-climbs-to-6-000-for-the-first-time-this-year) on Cheddar TV, where he mentions Decred at 2:07.
 * [Mention](https://btcmanager.com/blockchains-neglect-social-contracts-will-likely-fail/) of Decred in BTCManager from after Blockchain Week meeting.
-* The Information quoted @jy-p in a [story](https://www.theinformation.com/articles/can-crypto-crack-the-retail-market) about the launch of Spedn.
-* @MustStopMurad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.".
-* Secured a speaking slot for @jy-p about decentralization and Decred's funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
+* The Information quoted Jake in a [story](https://www.theinformation.com/articles/can-crypto-crack-the-retail-market) about the launch of Spedn.
+* Murad was [quoted](https://www.forbes.com/sites/cbovaird/2019/05/10/why-is-bitcoin-leaving-top-cryptos-in-the-dust/) in Forbes and mentions Decred: "While Bitcoin has been outperforming altcoins since April, I think altcoins which have tracked BTC movements most closely are the ones being accumulated by 'Smart money' investors and VCs: coins like Decred, Tezos, and Monero.".
+* Secured a speaking slot for Jake about decentralization and Decred's funding mechanism at the Voice of Blockchain, an event that will take place in Chicago this fall.
 * Worked with the community to finalize a byline on Decred's approach to staking.
 * Submitted PR proposal to Politeia for next six months funding.
 
@@ -154,59 +154,59 @@ Ditto's May achievements:
 Attended:
 
 * May 4-5 - [VII Bitconf](https://www.bitconf.com.br/portal/vii-bitconf/) - São Paulo, Brazil. Decred was well [represented](https://twitter.com/Decred_BR/status/1124763200984158208) at this event with around 1,200 participants.
-* May 7 - [ThatCrypto Meetup](https://www.meetup.com/ThatCrypto/events/261086851/) - Toronto, Canada. @michae2xl and @zubair [presented](https://twitter.com/Decred_CA/status/1126168172472733696) Decred. ([video](https://www.youtube.com/watch?v=Q47CDWYuIHc))
-* May 13 - [Consensus 2019](https://www.coindesk.com/events/consensus-2019) - New York, USA. @jy-p presented a Decred Roadmap update, featuring details on funding and development. ([video](https://www.youtube.com/watch?v=h-AfggMHVvE))
-* May 15 - [Atomic Swap](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) - New York, USA. Decred co-sponsored the Atomic Swap event organized by The Block. @jy-p spoke on a panel about "The Idealist's Dilemma".
-* May 17 - Global Blockchain Forum - Hangzhou, China. @Dominic [presented](https://twitter.com/wanbihou/status/1129467061220941824) Decred.
-* May 18 - Chengdu, China. @Dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
-* May 18-19 - [CriptoLatinFest](https://criptolatinfest.com/) - Bogotá, Colombia. @elian presented Decred at this event with around 300 attendees. The event attracted attendees who were more interested in speculation than the fundamentals of the technology. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190518-criptolatinfest-bogota-colombia.md))
-* May 20-21 - [La Conexión](https://www.la-conexion.com/) - Medellín, Colombia. @elian presented Decred at this event with around 200 attendees, an international mixture of investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190520-laconexion-medellin-colombia.md))
-* May 23 - [Decred AMA](https://twitter.com/DecredCN/status/1131487833137397760) - online. This AMA was organized by Cobo Wallet and @Dominic answered questions. The AMA led [300](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15587188721553ZAajQ:decred.org) people to join the [Decred Chinese](https://t.me/decred_cn) Telegram channel.
-* May 24 - [Bitcoinday](https://bitcoinday.tv/) - Montevideo, Uruguay. The event had around 200 attendees and @elian represented Decred on a panel on blockchain and business, and also ran a workshop about dcrtime and Politeia attended by around 20 people. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190524-bitcoinday-montevideo-uruguay.md))
-* May 24-25 - [Blockchain Nigeria Group](http://blockchainnigeria.group/) - Lagos, Nigeria. @collins and some other Raedah Group developers represented Decred at the event and delivered a presentation.
-* May 28 - [Gophers Silesia](https://www.meetup.com/GophersSilesia/events/260673565/) - Katowice, Poland. @kozel [delivered](https://twitter.com/Decred_PL/status/1133452876716621824) a talk about Decred which has been recorded, video to come.
+* May 7 - [ThatCrypto Meetup](https://www.meetup.com/ThatCrypto/events/261086851/) - Toronto, Canada. Michael Guimaraez (@michae2xl) and Zubair Zia [presented](https://twitter.com/Decred_CA/status/1126168172472733696) Decred. ([video](https://www.youtube.com/watch?v=Q47CDWYuIHc))
+* May 13 - [Consensus 2019](https://www.coindesk.com/events/consensus-2019) - New York, USA. Jake presented a Decred Roadmap update, featuring details on funding and development. ([video](https://www.youtube.com/watch?v=h-AfggMHVvE))
+* May 15 - [Atomic Swap](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) - New York, USA. Decred co-sponsored the Atomic Swap event organized by The Block. Jake spoke on a panel about "The Idealist's Dilemma".
+* May 17 - Global Blockchain Forum - Hangzhou, China. Dominic [presented](https://twitter.com/wanbihou/status/1129467061220941824) Decred.
+* May 18 - Chengdu, China. Dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
+* May 18-19 - [CriptoLatinFest](https://criptolatinfest.com/) - Bogotá, Colombia. Elian presented Decred at this event with around 300 attendees. The event attracted attendees who were more interested in speculation than the fundamentals of the technology. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190518-criptolatinfest-bogota-colombia.md))
+* May 20-21 - [La Conexión](https://www.la-conexion.com/) - Medellín, Colombia. Elian presented Decred at this event with around 200 attendees, an international mixture of investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190520-laconexion-medellin-colombia.md))
+* May 23 - [Decred AMA](https://twitter.com/DecredCN/status/1131487833137397760) - online. This AMA was organized by Cobo Wallet and Dominic answered questions. The AMA led [300](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15587188721553ZAajQ:decred.org) people to join the [Decred Chinese](https://t.me/decred_cn) Telegram channel.
+* May 24 - [Bitcoinday](https://bitcoinday.tv/) - Montevideo, Uruguay. The event had around 200 attendees and Elian represented Decred on a panel on blockchain and business, and also ran a workshop about dcrtime and Politeia attended by around 20 people. ([report](https://github.com/decredcommunity/events/blob/master/reports/20190524-bitcoinday-montevideo-uruguay.md))
+* May 24-25 - [Blockchain Nigeria Group](http://blockchainnigeria.group/) - Lagos, Nigeria. Collins and some other Raedah Group developers represented Decred at the event and delivered a presentation.
+* May 28 - [Gophers Silesia](https://www.meetup.com/GophersSilesia/events/260673565/) - Katowice, Poland. Tomasz Porwit (@kozel) [delivered](https://twitter.com/Decred_PL/status/1133452876716621824) a talk about Decred which has been recorded, video to come.
 
 Upcoming:
 
-* Jun 12 - [Meetup](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. Join Decred, [The Dartmouth Entrepreneurial Network of DC](https://dendc.wildapricot.org/), and [TechSpace](https://www.techspace.com/coworking-space-near-washington-dc-virginia/) for an evening of conversations and an overview of Decred: A Decentralized Autonomous Entity. Tickets are free but limited, available [here](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/). Organized by @akinsawyerr.
-* Jun 18 - [TF Blockchain](https://www.tfblock.io/portland) - Portland, USA. @raedah will represent Decred.
+* Jun 12 - [Meetup](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. Join Decred, [The Dartmouth Entrepreneurial Network of DC](https://dendc.wildapricot.org/), and [TechSpace](https://www.techspace.com/coworking-space-near-washington-dc-virginia/) for an evening of conversations and an overview of Decred: A Decentralized Autonomous Entity. Tickets are free but limited, available [here](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/). Organized by Akin Sawyerr.
+* Jun 18 - [TF Blockchain](https://www.tfblock.io/portland) - Portland, USA. Steven Wagner (@raedah) will represent Decred.
 * Jun 19-23 - [Campus Party](https://brasil.campus-party.org/campus-party-brasilia/) - Brasília, Brazil. Decred team [will be](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15596690544084yAyIh:decred.org) presenting 2 lectures on the main stages and around 4 or 5 in our arena. The Brazilian community will be sponsoring a CTF (Capture the Flag) championship with Decred awards. The event runs 24 hours a day. There will be about 60,000 participants and 6,000 camped.
-* Jul 1-2 - [Wharton Roundtable on Cryptogovernance](https://zicklincenter.wharton.upenn.edu/event/wharton-cryptogovernance-workshop/) - San Francisco, USA. The Zicklin Center for Business Ethics Research at the Wharton School of the University of Pennsylvania is launching a new initiative on the governance of blockchain-related projects, platforms, and consortia. Initial meeting will take place at Wharton San Francisco for approximately 25 highly-esteemed experts, representing a wide variety of perspectives and backgrounds. @akinsawyerr will be attending on behalf of Decred.
+* Jul 1-2 - [Wharton Roundtable on Cryptogovernance](https://zicklincenter.wharton.upenn.edu/event/wharton-cryptogovernance-workshop/) - San Francisco, USA. The Zicklin Center for Business Ethics Research at the Wharton School of the University of Pennsylvania is launching a new initiative on the governance of blockchain-related projects, platforms, and consortia. Initial meeting will take place at Wharton San Francisco for approximately 25 highly-esteemed experts, representing a wide variety of perspectives and backgrounds. Akin Sawyerr will be attending on behalf of Decred.
 
 Events [repository](https://github.com/decredcommunity/events) was re-published under [decredcommunity](https://github.com/decredcommunity) GitHub organization with 10 past [reports](https://github.com/decredcommunity/events/tree/master/reports) polished and extended with links to photos and videos. Event attendees are encouraged to [submit](https://github.com/decredcommunity/events/wiki/Submit-Event-Report) event reports to share experience with other Decred representatives and the wider community about cryptocurrency situation in various locations.
 
 ## Media
 
-@jy-p participated in an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on the /r/cryptocurrency subreddit, answering 18 questions.
+Jake participated in an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on the /r/cryptocurrency subreddit, answering 18 questions.
 
 Selected articles:
 
 * How I Make a Living in the Crypto Gig Economy by @s\_ben ([medium](https://medium.com/@seth.benton/how-i-make-a-living-in-the-crypto-gig-economy-8674f3693858))
-* The Basics of Blockchain Governance by @Haon ([medium](https://medium.com/@NoahPierau/the-basics-of-blockchain-governance-6669c098344d))
-* Decred as DAE Infrastructure provider by @neil\_nie ([dcrclub](https://blog.dcrclub.org/chapter_05/dcr_DAE.html)), translated to English by @changhugo ([medium](https://medium.com/@changhugo/decred-as-a-dae-infrastructure-provider-970677f38179))
+* The Basics of Blockchain Governance by Noah Pierau ([medium](https://medium.com/@NoahPierau/the-basics-of-blockchain-governance-6669c098344d))
+* Decred as DAE Infrastructure provider by @neil\_nie ([dcrclub](https://blog.dcrclub.org/chapter_05/dcr_DAE.html)), translated to English by Hugo ([medium](https://medium.com/@changhugo/decred-as-a-dae-infrastructure-provider-970677f38179))
 * Comparing Double Spend Resistance: Decred VS Bitcoin - Part 1 by @Fiach\_Dubh ([medium](https://medium.com/coinmonks/comparing-double-spend-resistance-decred-vs-bitcoin-part-1-330c8081b2a9))
 * Bitcoin: an Accounting Revolution by Permabull Nino ([medium](https://medium.com/@permabullnino/bitcoin-an-accounting-revolution-40efcb903d7b)) - not Decred related
-* The community of Decred is present around the world by @Haon ([medium](https://medium.com/decred/the-community-of-decred-is-present-around-the-world-64fcc9113924))
-* Decred Governance: An Iterative Approach by @max\_bronstein ([medium](https://medium.com/@maxbronstein/decred-governnce-an-iterative-approach-2a89b9751f5e))
+* The community of Decred is present around the world by Noah Pierau ([medium](https://medium.com/decred/the-community-of-decred-is-present-around-the-world-64fcc9113924))
+* Decred Governance: An Iterative Approach by Max Bronstein ([medium](https://medium.com/@maxbronstein/decred-governnce-an-iterative-approach-2a89b9751f5e))
 * Decred Price Analysis: Emergence as a digital store of value ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-emergence-as-a-digital-store-of-value))
 
 Translations:
 
-* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by @duyenemdo - sponsored by Raedah Group. Since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1. Vietnamese now leads by the number of DJ translations being and is the only language that has all issues.
-* March Journal [translated](https://insaf01.github.io/decred-journal-ar/journal/201903.html) to Arabic by @arij and reviewed by @abdulrahman4.
+* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by Duyên Em - sponsored by Raedah Group. Since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1. Vietnamese now leads by the number of DJ translations being and is the only language that has all issues.
+* March Journal [translated](https://insaf01.github.io/decred-journal-ar/journal/201903.html) to Arabic by Insaf Nori and reviewed by @abdulrahman4.
 
 Videos:
 
-* Decred Distributed with @elian, first release from the newly rebooted Decred Assembly ([youtube](https://www.youtube.com/watch?v=N7GYD8zwOe8))
+* Decred Distributed with Elian, first release from the newly rebooted Decred Assembly ([youtube](https://www.youtube.com/watch?v=N7GYD8zwOe8))
 * What is Decred - Explainer Video by blockgeeks ([youtube](https://www.youtube.com/watch?v=qT9oBsbzUos))
-* Bitcoin's Big Brother... Introducing Decred - An Interview with @oregonisaac by BBOD ([youtube](https://www.youtube.com/watch?v=MscFEpWuWU4))
+* Bitcoin's Big Brother... Introducing Decred - An Interview with Isaac by BBOD ([youtube](https://www.youtube.com/watch?v=MscFEpWuWU4))
 
 Audio:
 
-* Decred: Everything You Ever Wanted to Know - Vexpoint podcast with @Haon ([vexpoint.com](http://www.vexpoint.com/decred-investment/))
-* Crypto 101 podcast with @moo31337, introduction to Decred ([listennotes.com](https://www.listennotes.com/podcasts/crypto-101-with/horizen-decred-casino-coin-101-o_stJI2LaQC/), starts 17:32)
-* CryptoBasic 101 Series: Decred - podcast with @richardred ([cryptobasicpodcast.com](https://www.cryptobasicpodcast.com/home/180))
-* Decred in Depth episode 1 DCR 101 with @jz, hosted by @anshawblack ([youtube](https://www.youtube.com/watch?v=rcEJuN7zh2M), [soundcloud](https://soundcloud.com/decredindepth/ep-1-jonathan-zeppettini-jz-dcr-101))
+* Decred: Everything You Ever Wanted to Know - Vexpoint podcast with Noah ([vexpoint.com](http://www.vexpoint.com/decred-investment/))
+* Crypto 101 podcast with Marco, introduction to Decred ([listennotes.com](https://www.listennotes.com/podcasts/crypto-101-with/horizen-decred-casino-coin-101-o_stJI2LaQC/), starts 17:32)
+* CryptoBasic 101 Series: Decred - podcast with Richard Red ([cryptobasicpodcast.com](https://www.cryptobasicpodcast.com/home/180))
+* Decred in Depth episode 1 DCR 101 with Jonathan Zeppettini, hosted by @anshawblack ([youtube](https://www.youtube.com/watch?v=rcEJuN7zh2M), [soundcloud](https://soundcloud.com/decredindepth/ep-1-jonathan-zeppettini-jz-dcr-101))
 
 ## Community Discussions
 
@@ -226,7 +226,7 @@ Community stats as of Jun 1:
 
 Comm systems news:
 
-* Someone [trolled](https://www.reddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead/) r/decred with some posts about @jy-p's dress sense or something in early June, and [deleted](https://www.removeddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead) their posts after some time. Not feeding trolls with attention is the best known tactic.
+* Someone [trolled](https://www.reddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead/) r/decred with some posts about Jake's dress sense or something in early June, and [deleted](https://www.removeddit.com/r/decred/comments/bvw3pv/change_the_name_and_bring_back_tacotime_to_lead) their posts after some time. Not feeding trolls with attention is the best known tactic.
 
 Selected Reddit posts:
 
@@ -239,10 +239,10 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-* @BradyDale live [tweets](https://twitter.com/BradyDale/status/1128670013974622208) @jy-p's presentation at ChangeLog giving an update on Decred's progress over the last year and next steps.
-* @lukebp [tweets](https://twitter.com/lukebp_/status/1132310565093879808) about misalignment of incentives in Bitcoin.
-* @lukebp [tweets](https://twitter.com/lukebp_/status/1132452552317001730) about how Decred makes minority forks expensive to execute.
-* @lukebp [explains](https://twitter.com/lukebp_/status/1124698848654438400) (once again) why "plutocracy" does not apply to blockchains.
+* Brady Dale live [tweets](https://twitter.com/BradyDale/status/1128670013974622208) Jake's presentation at ChangeLog giving an update on Decred's progress over the last year and next steps.
+* Luke [tweets](https://twitter.com/lukebp_/status/1132310565093879808) about misalignment of incentives in Bitcoin.
+* Luke [tweets](https://twitter.com/lukebp_/status/1132452552317001730) about how Decred makes minority forks expensive to execute.
+* Luke [explains](https://twitter.com/lukebp_/status/1124698848654438400) (once again) why "plutocracy" does not apply to blockchains.
 
 ## Markets
 
