--- a/journal/201906.md
+++ b/journal/201906.md
@@ -10,7 +10,9 @@
 
 [dcrd](https://github.com/decred/dcrd): {}
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+[dcrwallet](https://github.com/decred/dcrwallet):
+
+* curve https://github.com/decred/dcrwallet/pull/1468
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
@@ -36,7 +38,7 @@ Other:
 
 * {smaller items go here}
 
-Dev activity stats for June: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({chart link is optional, drop if not ready}))
+Dev activity stats for June: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository. ([chart]({chart link is optional, drop if not ready}))
 
 ## People
 
@@ -74,7 +76,7 @@ Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. Th
 
 {helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now}
 
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
 
 {any interesting analysis or events in the network}
 
@@ -116,13 +118,13 @@ New merchants:
 
 Attended:
 
-* {}
+* {dates} - [{title}]({event link}) - {city}, {country}. {recap}
 
 Upcoming:
 
-* {}
+* {dates} - [{title}]({event link}) - {city}, {country}. {info}
 
-{announcements from events people}
+{announcements in Events domain}
 
 ## Media
 
@@ -132,12 +134,12 @@ Upcoming:
 
 Selected articles:
 
-* {title} by {author} ([{domain}]({link}) - {optional comment}
+* {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 * https://medium.com/@Fiach_dubh/the-regulators-are-coming-a1ba2f8c02be by Fiach_Dubh ([discussion](https://www.reddit.com/r/decred/comments/byffz1/the_regulators_are_coming_canary_in_the_decred/))
 
 Translations:
 
-* {}
+* Decred as a DAE Infrastructure Provider - [in Russian](https://medium.com/decred-russia/decred-%D0%BA%D0%B0%D0%BA-%D0%BF%D0%BE%D1%81%D1%82%D0%B0%D0%B2%D1%89%D0%B8%D0%BA-%D0%B8%D0%BD%D1%84%D1%80%D0%B0%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D1%8B-dae-1f89952b0bab) by @DZ.
 
 Videos:
 
@@ -169,9 +171,13 @@ Comm systems news:
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-Reddit: {interesting threads}
+Selected Reddit posts:
 
-Twitter: {interesting threads}
+* {}
+
+Selected Twitter discussions:
+
+* {}
 
 ## Markets
 
