--- a/journal/201906.md
+++ b/journal/201906.md
@@ -62,6 +62,8 @@ In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 
 * [Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58). Commenters in the proposal and [on Reddit](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) appreciated how the proposal has sections for both technical and non technical audiences, and also noted how Decred's on-chain voting systems allows for elegant updates without years of fruitless discussions.
 
+https://twitter.com/RichardRed0x/status/1139860218010058753
+
 ## Network
 
 {cross-check dcrdata.org, dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -136,6 +138,7 @@ Selected articles:
 
 * {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 * https://medium.com/@Fiach_dubh/the-regulators-are-coming-a1ba2f8c02be by Fiach_Dubh ([discussion](https://www.reddit.com/r/decred/comments/byffz1/the_regulators_are_coming_canary_in_the_decred/))
+* https://medium.com/decred/why-the-name-decred-is-awesome-9627ae9b4e2
 
 Translations:
 
@@ -167,7 +170,7 @@ Community stats:
 
 Comm systems news:
 
-* {}
+* Several Matrix rooms were upgraded following the first stable release of Matrix spec. The inconvenience is that users need to join new rooms.
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -200,6 +203,18 @@ In June DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate wa
 Bittrex stops trading of 32 assets for US customers. https://bittrex.zendesk.com/hc/en-us/articles/360028996652 {mention their price change on that day}
 
 India is proposing a 10-year jail sentence for those who mine, hold, or transact with cryptocurrencies. https://twitter.com/APompliano/status/1137025904830496770 {find better links}
+
+More geofencing for "uncertainty" https://www.gate.io/article/16909
+
+https://www.reddit.com/r/CryptoCurrency/comments/bvuon5/what_did_you_expect/
+
+Facebook Libra:
+
+* https://www.theblockcrypto.com/2019/06/14/facebooks-cryptocurrency-partners-revealed-we-obtained-the-entire-list-of-inaugural-backers/
+
+Ad blocking browser extensions like uBlock are about to get hit by new Google Chrome [restrictions](https://www.theregister.co.uk/2019/06/13/google_chrome_ad_blockers/). The move triggered a lot of controversy, partly because the stated intent to protect the users from malicious extensions also restricts users' ability to block unwanted and dangerous web content.
+
+Who would have thought that a 27-year old _text editor_ can still have an arbitrary code execution [vulnerability](https://www.theregister.co.uk/2019/06/12/vim_remote_command_execution_flaw/)? This is a reminder that correctness is hard and why it takes so much work to build and test robust software.
 
 ## About This Issue
 
