--- a/journal/201904.md
+++ b/journal/201904.md
@@ -170,6 +170,7 @@ Selected articles:
 Translations:
 
 * Guides to solo staking and ticket splitting have been [translated](https://mp.weixin.qq.com/s/lAxmWYItifQldGgwTVOWHw) to Chinese by @wanbihou. Check out [dcrclub.org](https://blog.dcrclub.org/) for a collection of Chinese translations of Decred articles.
+* @denyszayets translated Decred Journal to [Russian](https://medium.com/decred-russia/decred-journal-%D0%B0%D0%BF%D1%80%D0%B5%D0%BB%D1%8C-2019-2903f7fc6219)
 * @akinsawyerr translated a Decred review by iBotics Research from [Spanish](http://ibotics.es/reports/iBotics_Research_DCR.pdf) to [English](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$1556338959151873UVFAF:matrix.org).
 
 Videos:
