--- a/journal/201906.md
+++ b/journal/201906.md
@@ -18,7 +18,9 @@
 
 [Politeia](https://github.com/decred/politeia): {}
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
+
+* In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) the state of multiple elements of the puzzle.
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
@@ -64,6 +66,8 @@ In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 
 https://twitter.com/RichardRed0x/status/1139860218010058753
 
+Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) to list DCR on Jun 13.
+
 ## Network
 
 {cross-check dcrdata.org, dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -92,7 +96,8 @@ Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes p
 
 Exchange integrations:
 
-* {}
+* Exmo https://twitter.com/decredproject/status/1141833303349235712 https://exmo.com/en/news_view?id=2776
+* https://twitter.com/vertbase/status/1141735926059716611 https://twitter.com/vertbase/status/1141826092564701184
 
 {OTC desks}
 
@@ -139,6 +144,7 @@ Selected articles:
 * {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 * https://medium.com/@Fiach_dubh/the-regulators-are-coming-a1ba2f8c02be by Fiach_Dubh ([discussion](https://www.reddit.com/r/decred/comments/byffz1/the_regulators_are_coming_canary_in_the_decred/))
 * https://medium.com/decred/why-the-name-decred-is-awesome-9627ae9b4e2
+* https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e
 
 Translations:
 
@@ -150,7 +156,7 @@ Videos:
 
 Audio:
 
-* {}
+* DiD 2 https://www.youtube.com/watch?v=W6yUVq97cd8 https://soundcloud.com/decredindepth/ep2-luke-powell-politeia-decred-contractor-model
 
 ## Community Discussions
 
@@ -192,7 +198,11 @@ In June DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate wa
 
 {PoW, ASIC resistance, cc network security and other cc tech}
 
+https://twitter.com/LuxorTechTeam/status/1141816750104821770
+
 {governance, funding, chain forks, community forks, controversy}
+
+https://www.coindesk.com/hard-core-fund-collects-50-btc-in-china-to-support-bitcoin-developers
 
 {DEX}
 
@@ -200,11 +210,21 @@ In June DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate wa
 
 {other: regulations, security, fun}
 
+India is proposing a 10-year jail sentence for those who mine, hold, or transact with cryptocurrencies. Ironically, the same bill proposes to create government-controlled Digital Rupee.
+
+* https://twitter.com/APompliano/status/1137025904830496770 {find better links}
+* https://www.theblockcrypto.com/tiny/indias-draft-bill-proposes-a-10-year-jail-sentence-for-using-cryptocurrencies/
+* https://www.ccn.com/bitcoin-india-anti-crypto-bill-imprisonment/
+
+G20 made a [commitment](https://www.coindesk.com/g20-reaffirms-it-will-apply-expected-tough-new-fatf-rules-on-crypto) to push more privacy invasive procedures: "exchanges and other service providers would have to pass customer information to each other when transferring funds, just as banks are required to do".
+
 Bittrex stops trading of 32 assets for US customers. https://bittrex.zendesk.com/hc/en-us/articles/360028996652 {mention their price change on that day}
 
-India is proposing a 10-year jail sentence for those who mine, hold, or transact with cryptocurrencies. https://twitter.com/APompliano/status/1137025904830496770 {find better links}
-
 More geofencing for "uncertainty" https://www.gate.io/article/16909
+
+Bancor is to join the "regulatory uncertainty" group and [block access](https://support.bancor.network/hc/en-us/articles/360029588431-US-Service-Restriction) for US users to its web application.
+
+Binance is [stopping](https://techcrunch.com/2019/06/14/binance-begins-to-restrict-us-customers/) service to US customers via their global binance.com site, while it is expected that they will launch a separate US-based service.
 
 https://www.reddit.com/r/CryptoCurrency/comments/bvuon5/what_did_you_expect/
 
@@ -213,6 +233,8 @@ Facebook Libra:
 * https://www.theblockcrypto.com/2019/06/14/facebooks-cryptocurrency-partners-revealed-we-obtained-the-entire-list-of-inaugural-backers/
 
 Ad blocking browser extensions like uBlock are about to get hit by new Google Chrome [restrictions](https://www.theregister.co.uk/2019/06/13/google_chrome_ad_blockers/). The move triggered a lot of controversy, partly because the stated intent to protect the users from malicious extensions also restricts users' ability to block unwanted and dangerous web content.
+
+The rate of SIM swapping attacks is [increasing](https://www.tonysheng.com/sim-swap) while phone numbers and email becomes a single point of failure. [Educate yourself](https://medium.com/mycrypto/what-to-do-when-sim-swapping-happens-to-you-1367f296ef4d) and do what's necessary to protect your accounts.
 
 Who would have thought that a 27-year old _text editor_ can still have an arbitrary code execution [vulnerability](https://www.theregister.co.uk/2019/06/12/vim_remote_command_execution_flaw/)? This is a reminder that correctness is hard and why it takes so much work to build and test robust software.
 
