--- a/journal/201906.md
+++ b/journal/201906.md
@@ -98,6 +98,8 @@ Exchange integrations:
 
 * Exmo https://twitter.com/decredproject/status/1141833303349235712 https://exmo.com/en/news_view?id=2776
 * https://twitter.com/vertbase/status/1141735926059716611 https://twitter.com/vertbase/status/1141826092564701184
+* EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) DCR and wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) about it.
+* https://twitter.com/wanbihou/status/1143846271645437952
 
 {OTC desks}
 
@@ -148,6 +150,7 @@ Selected articles:
 * https://medium.com/decred/why-the-name-decred-is-awesome-9627ae9b4e2
 * https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e
 * https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be
+* https://medium.com/@aappiahpro1/the-roadblocks-to-cryptocurrency-adoption-in-africa-3be2c656ec07 by @George Pro
 
 Translations:
 
@@ -210,11 +213,19 @@ https://twitter.com/LuxorTechTeam/status/1141816750104821770
 
 https://www.coindesk.com/hard-core-fund-collects-50-btc-in-china-to-support-bitcoin-developers
 
+https://www.grin-forum.org/t/proposal-grin-governance-iteration/5191 {"it's arguably one of the most significant proposals thus far" -- https://proofofwork.news/p/proof-of-work-71}
+
 {DEX}
 
 {related exchanges and websites}
 
 {other: regulations, security, fun}
+
+{Reddit AMA, deleted content, Wasabi is the enemy}
+
+* https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/
+
+{largest coinjoin ever coindesk, 20 btc grant}
 
 India is proposing a 10-year jail sentence for those who mine, hold, or transact with cryptocurrencies. Ironically, the same bill proposes to create government-controlled Digital Rupee.
 
