add community discussion numbers

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -232,19 +232,19 @@ Audio:
 
 ## Community Discussions
 
-Community stats:
+Community stats as of July 1:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
+* Politeia users: 189 (+14)
+* Twitter followers: 40,479 (+17)
+* Reddit subscribers: 9,505 (+46)
+* Matrix users: 364 (+27)
+* Slack users: 6,769 (+48)
 * Discord users: {}, verified to post: {}
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
-* Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: Decred page {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* Telegram users: 3,407 (-169)
+* YouTube subscribers: 3,787 (+18)
+* Facebook followers: 3,230 (+11), likes: 2,964 (+10)
+* LinkedIn followers: Decred page 567 (+23)
+* GitHub dcrd stars: 494 (+5), forks: 1,337 (+13)
 
 Comm systems news:
 
