--- a/journal/201906.md
+++ b/journal/201906.md
@@ -134,17 +134,17 @@ Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_t
 
 {cross-check dcrdata.org, dcred.eu, dcrstats.com and charts.dcr.farm to get the numbers}
 
-Hashrate: June's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: June's hashrate opened at ~504 Ph/s and closed ~540 Ph/s, bottoming at 369 Ph/s and peaking at 607 Ph/s throughout the month. Pool hashrate distribution as of Jul2: lab.antpool.com 18%, UUPool 17.7%, F2Pool 14%, Poolin 9.5%, BTC.com 9%, Luxor 2.2%, CoinMine 0.21%, BeePool 0.15%, suprnova 0.03% and others 29% per per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
 {helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now}
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The price varied between 116.78-127.29 DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to 49-48.5% of the available supply.
 
 {recap of ticket price action if it was interesting}
 
-{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now}
+{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now} {exact dates https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1559381330622&to=1561886930623 }
 
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
+{Get status from chappjc}
 
 {any interesting analysis or events in the network}
 
