--- a/journal/201906.md
+++ b/journal/201906.md
@@ -154,20 +154,13 @@ Staking: 30-day average ticket price was 120 DCR (+4) per dcrstats.com. The pric
 
 ## Integrations
 
-{new items of infrastructure or updates from existing}
+Exmo exchange [delivered](https://exmo.com/en/news_view?id=2776) on their [proposal](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) and enabled  DCR/BTC, DCR/RUB, DCR/UAH pairs on their exchange. 
 
-Exchange integrations:
+Vertbase exchange added both [recurring orders](https://twitter.com/vertbase/status/1141735926059716611) and an option to [Buy and Sell](https://twitter.com/vertbase/status/1141735926059716611) digital assets using their exchange.
 
-* Exmo https://twitter.com/decredproject/status/1141833303349235712 https://exmo.com/en/news_view?id=2776
-* https://twitter.com/vertbase/status/1141735926059716611 https://twitter.com/vertbase/status/1141826092564701184
-* EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) DCR and wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) about it.
-* https://twitter.com/wanbihou/status/1143846271645437952
+EliteX [listed](https://twitter.com/elitexcrypto/status/1143044131800977409) Decred and also wrote an [article](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5) to explain decred to their users.
 
-{OTC desks}
-
-{payment processors}
-
-{wallets}
+MXC Exchange [added](https://twitter.com/wanbihou/status/1143846271645437952) a DCR/USDT exchange pair.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
